--- a/activiti/src/main/resources/properties/jdbc.properties
+++ b/activiti/src/main/resources/properties/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/activiti
-jdbc_username=root
-jdbc_password=ROOT 
+jdbc_url=jdbc:mysql://localhost:3306/activiti_test?characterEncoding=UTF-8
+jdbc_username=jun.chen
+jdbc_password=jun.chen
